<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Mobile University</string>
    <string name="section_default_hdr">Section</string>
	<string name="standard_list">Standard</string>
	<string name="empty_list">Empty</string>
    <string name="login_moodle_desc">Please enter Moodle details</string>
    <string name="login_moodle_hint">Moodle URL</string>
    <string name="login_url">Site Url</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="coursework_home_view">Overview</string>
    <string name="coursework_detail_view">Course Work</string>
    <string name="coursework_assigndetail_view">Assignments</string>
    <string name="coursework_forumdetail_view">Forums</string>
    <string name="coursework_gradedetail_view">Grades</string>
    <string name="upload_view">Upload File</string>
    <string name="upload_search_hint">Search files..</string>
    <string name="courses_view">Courses</string>
    <string name="settings_view">Settings</string>
    <string name="upload_btn_view">Upload</string>
    <string name="select_course">Select Course</string>
    <string name="deafult_course_name">Unknown</string>
    <string name="documents_view">Documents</string>
    <string name="documents_desc_view">Information available online about the course content</string>
    <string name="assignments_view">Assignments</string>
    <string name="assignments_desc_view">Download assignment details of deliverables</string>
    <string name="grades_view">Grades</string>
    <string name="grades_desc_view">Results from Assignments</string>
    <string name="forum_view">Forum</string>
    <string name="forum_desc_view">View Forums Online</string>
    <string name="offline_view">Offline Files</string>
    <string name="offline_desc_view">View Downloaded Files</string>
    <string name="general_discus_view">General Discussion</string>
    <string name="general_discus_desc_view">Unread Post Count (5)</string>
    <string name="week_one_view">Week One Topic</string>
    <string name="week_one_desc_view">Unread Post Count (0)</string>
    <string name="assign_discus_view">Assignment Discussion</string>
    <string name="assign_discus_desc_view">Unread Post Count (2)</string>
    <string name="account_hdr_text">Accounts</string>
    <string name="account_logout_text">Logout</string>
    <string name="storage_hdr_text">Storage</string>
    <string name="default_file_size_hdr_text">Default auto file size download:-</string>
    <string name="default_file_size_kb_text">Kb</string>
    <string name="default_download_toggle_hdr_text">Auto download files:-</string>
    <string name="maximum_download_filesize_hdr_text">Maximum download file size:-</string>    
    <string name="download_toggle_hdr_text">Download offline files:-</string>
    <string name="empty_coursework">No Elements for Selected Coursework View</string>
    <string name="empty_upload">No Files for Upload</string>
    <string name="spin">Courses</string>
    <string name="database_home_view">Offline Files</string>
    <string name="login_incorrect">Your username and / or password are incorrect. If you are sure you have correct details, please contact your system administrator.</string>
    <string name="user_no_courses">You are not enrolled in any courses.</string>
    <string-array name="course">
        <item>Course Test</item>
        <item>Course 2</item>
        <item>Course 3</item>
    </string-array>
    <string name="not_online">It seems you are not online. Did you forgot to switch-off airplane mode ?</string>
    <string name="loading">Loading</string>
    <string name="wait_while_login">Please wait whilst we\'re trying to log you in.</string>
	<string name="wait_while_get_courses">Please wait whilst we\'re trying to get your enrolled courses</string>
	<string name="wait_while_get_course_detail">Getting the details for your course...</string>
	<string name="available_courses">Available courses</string>
	<string name="login_mobile">mobile</string>
	<string name="login_university">University</string>
	<string name="login_select_university">Please select your university</string>
	<string name="notes_title">Course notes</string>
	<string name="general_title">View title</string>
	<string name="note_add">Add a new note</string>
	<string name="install_evernote">Mobile University uses the Evernote app to create notes. Would you like to install it ?</string>
	<string name="authenticate_evernote">As Mobile University uses Evernote to keep track of notes, you can only access them if you authenticate Evernote first.</string>
	<string name="share_using">Share using</string>
	<string name="note_content_not_set">It seems this note is currently empty (or hasn\'t been synchronized yet). Please connect to the internet and restart the application to share this note.</string>
	<string name="menu_courses">Courses</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_upload">Upload file</string>
	<string name="menu_current_course">Selected Course</string>
	<string name="course_section_document_title">Documents</string>
	<string name="course_section_document_description">Documents related to the selected course</string>
	<string name="course_section_assignments_title">Assignments</string>
	<string name="course_section_assignments_description">Assignment details of deliverables (Online only)</string>
	<string name="course_section_grades_title">Grades</string>
	<string name="course_section_grades_description">Results from assignments (Online only)</string>
	<string name="course_section_forums_title">Forums</string>
	<string name="course_section_forums_description">View the course forums (Online only)</string>
	<string name="course_section_notes_title">Notes</string>
	<string name="course_section_notes_description">View notes of your courses</string>
	<string name="settings_auto_download_files">Automatically download files ?</string>
	<string name="settings_sync_deadlines">Synchronize your course deadlines to your calendar ?</string>
	<string name="menu_logout">Logout</string>
	<string name="course_screen_title">Course sections</string>
	<string name="file_not_found">This file have not been downloaded yet. Please make sure you have a data connection and try again.</string>
	<string name="settings_auto_download_content">Automatically download course content (non-files) ?</string>
	<string name="menu_calendar">Calendar</string>
	<string name="calendar_upcoming_title">Upcoming courses / deadlines</string>
	<string name="main_menu_button">Menu</string>
	<string name="menu_assignments">Assignments</string>
	<string name="menu_documents">Documents</string>
	<string name="menu_forums">Forums</string>
	<string name="menu_grades">Grades</string>
	<string name="menu_notes">Notes</string>
	<string name="login_advanced_config">Click here for advanced configuration.</string>
	<string name="login_url">URL</string>
	<string name="settings_explanation">Here you can define your settings for the application.</string>
	<string name="settings_credits">Thank you for using this application. This project is open source and you can get all of the code @ www.github.com/JoshuaWohle/Moodle-for-Android. If you have any questions, you can send a quick e-mail to jwohle@gmail.com or the.omega.online@gmail.com. If you would like to help us out maintaining / upgrading this app, please do get in touch as well !</string>
	<string name="month_back">&lt;&lt;&lt;</string>
	<string name="month_forward">&gt;&gt;&gt;</string>
	<string name="settings_course_schedule_url_hint">http://</string>
	<string name="settings_course_schedule_label">The URL of your course schedule application. This is not currently supported.</string>
		
</resources>