<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_main_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:padding="20dip"
    android:background="@color/light_brown">

    <TextView 
        android:text="@string/login_mobile" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dip"
        android:textStyle="bold"
        android:textColor="@color/dark_brown"
        android:textSize="40sp"/>
    
    <TextView 
        android:text="@string/login_university" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="30dip"
        android:textStyle="bold"
        android:textColor="@color/login_blue"
        android:textSize="40sp"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:singleLine="true" 
        android:hint="@string/login_username"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:singleLine="true" 
        android:hint="@string/login_password"
        android:layout_marginBottom="10dip"/>
    
    <TextView 
        android:text="@string/login_select_university" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_brown"/>
    
    <Spinner
        android:id="@+id/login_university_select"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
        android:layout_marginBottom="30dip"/>

    <Button
        style="@style/dark_theme"
        android:id="@+id/login_button"      
        android:layout_width="fill_parent"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_height="40dip"
        android:text="@string/login_button"
        android:layout_marginBottom="20dip" />
    
    <TextView 
        android:id="@+id/login_advanced_config"
        android:text="@string/login_advanced_config" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_brown"
        android:textStyle="italic"/>

</LinearLayout>