<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_brown"
    android:orientation="vertical">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_explanation"
        android:layout_marginBottom="30dip"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_course_schedule_label"
    	android:layout_marginBottom="10dip"/>
    
    <EditText 
        android:id="@+id/course_schedule_software_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:hint="@string/settings_course_schedule_url_hint"
    	android:layout_marginBottom="10dip"/>
        
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_auto_download_content"/>
    
    <ToggleButton
        android:id="@+id/settings_auto_download_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="On"
        android:textOff="Off"
        android:onClick="onToggleClicked"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_auto_download_files"/>
    
    <ToggleButton
        android:id="@+id/settings_auto_download_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="On"
        android:textOff="Off"
        android:onClick="onToggleClicked"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_sync_deadlines"/>
    
    <ToggleButton
        android:id="@+id/settings_sync_courses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="On"
        android:textOff="Off"
        android:onClick="onToggleClicked"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_sync_courses"/>
    
    <ToggleButton
        android:id="@+id/settings_sync_deadlines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="On"
        android:textOff="Off"
        android:onClick="onToggleClicked"
        android:layout_marginBottom="30dip"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_credits"
        android:layout_marginBottom="30dip"/>
    
</LinearLayout>