<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="TextAppearance.Large"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_brown"
    android:orientation="vertical"
    android:textColor="@color/White" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>

    <TextView
        style="@style/menu_item"
        android:id="@+id/menu_selected_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/document_button"
        android:text="@string/menu_current_course" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/White" />

    <TextView
        style="@style/menu_item"
        android:id="@+id/menu_select_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/course"
        android:text="@string/menu_courses" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/White" />

    <TextView
        style="@style/menu_item"
        android:id="@+id/menu_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/cal"
        android:text="@string/menu_calendar" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/White" />

    <!--
    <LinearLayout
        android:id="@+id/menu_upload_document"
        style="@style/menu_item" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/upload_button" 
            android:layout_marginRight="10dip"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_upload" />
    </LinearLayout>
    -->

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/White" />

    <TextView
        style="@style/menu_item"
        android:id="@+id/menu_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/settings"
        android:text="@string/menu_settings" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/White" />

    <TextView
        style="@style/menu_item"
        android:id="@+id/menu_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_logout" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/White" />

</LinearLayout>